# Persistence-without-Individuation

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  LICENSE  LICENSE-docs  README.md  pyproject.toml  requirements.txt
battery/: __init__.py  autocorrelation.py  broadcast.py  coherence.py  kuramoto.py  plv.py  returns.py  spectral.py  transport.py
invariance/: __init__.py  verify_C2.py  verify_C3.py  verify_C4.py  verify_C5.py  verify_C6.py  verify_C7.py  verify_C8.py  verify_C9.py
notebooks/: fig01_witness.ipynb
tests/: __init__.py  conftest.py  test_invariance.py  test_witness.py
witness/: __init__.py  dynamics.py  partitions.py  stationary.py
